# Analysis

./: .gitignore  auto.cmd  build.gradle  cmb.js  file_new.txt  hook.py  imvu_test.js  inject.bat  new.txt  run_frida.bat  run_target.bat  shellcode.bat
READMEDOC/: wangyi.md
app/: build.gradle  proguard-rules.pro
app/release/: app-release.apk
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Util.h  do_execve.c  jd_utils.cpp  longyuan.cpp  longyuan.h  native-lib.cpp  native-lib.h  plt_hook_ninja.cpp  plt_hook_target.cpp  plt_hook_target.h  plt_main.cpp  pubg.cpp  show_info.c  show_info.sh
app/src/main/cpp/CVE_2019_13272/: CMakeLists.txt  poc_2019_13272.c
app/src/main/cpp/GameProtector3/: main.cpp
app/src/main/cpp/HackLib/: CMakeLists.txt
app/src/main/cpp/HookUtil/: CMakeLists.txt  HookUtil.c  cflumen.cpp  hook_main.cpp
app/src/main/cpp/LIEF-0.10.1/: CMakeLists.txt
app/src/main/cpp/LIEF-0.10.1/api/python/Abstract/objects/: pySymbol.cpp
app/src/main/cpp/LIEF-0.10.1/cmake/: LIEFOptions.cmake
app/src/main/cpp/LIEF-0.10.1/src/: compiler_support.h
app/src/main/cpp/Substrate/: Buffer.hpp  CMakeLists.txt  CydiaSubstrate.h  SubstrateDebug.cpp  SubstrateHook.cpp  SubstrateHook.h  SubstrateX86.hpp  SymbolFinder.cpp
app/src/main/cpp/anti/: CMakeLists.txt  README.MD  anti.c
app/src/main/cpp/anti_protect/: CMakeLists.txt
app/src/main/cpp/anyHook/: RootUtils.cpp
app/src/main/cpp/binder_test/: CMakeLists.txt
app/src/main/cpp/binder_test/libhelloworldservice/: CMakeLists.txt
app/src/main/cpp/bintarget/: CMakeLists.txt  main.c
app/src/main/cpp/chroot_cve/: CMakeLists.txt
app/src/main/cpp/cmb/: CMakeLists.txt  cmb.cpp  cmb.hpp  cmb_main.cpp  cmb_main.hpp
app/src/main/cpp/debugger/: CMakeLists.txt  debugger.cpp
app/src/main/cpp/debugger/hoster/: debugger.cpp  test_cli.cpp
app/src/main/cpp/debugger/stuber/: krnel.cpp  krnel.h  stuber.cpp
app/src/main/cpp/exe/: main.cpp
app/src/main/cpp/fileless_so/: CMakeLists.txt  main.cpp
app/src/main/cpp/hack_haas/: CMakeLists.txt  main.c
app/src/main/cpp/helloworld/: CMakeLists.txt  hello.c  hello.cpp  hello.h  libhelloworld.c
app/src/main/cpp/inject/: CMakeLists.txt  inject.c  inject.h
app/src/main/cpp/javahook/: CMakeLists.txt  DalvikMethodHook.cpp  DalvikMethodHook.h  common.h  dvm.h  injectMain.c  libinject.c  libinject.h  libtest.cpp  shellcode.s  shellcode_ex.s
app/src/main/cpp/javahook/include/cutils/: log.h
app/src/main/cpp/javahook/include/utils/: Vector.h
app/src/main/cpp/jd/: jd_utils.cpp  jd_utils.h  native-lib.cpp  native-lib.h  native_bridge.h
app/src/main/cpp/libtarget/: main.c
app/src/main/cpp/libxhook/: CMakeLists.txt
app/src/main/cpp/linenoise/: CMakeLists.txt
app/src/main/cpp/linux_inside/: execve.c  wait_pid.c
app/src/main/cpp/linux_run/: do_execve.c  show_info.c  strtok_ex.c
app/src/main/cpp/memdump/: CMakeLists.txt  memdump.cpp
app/src/main/cpp/memory_mmap/: CMakeLists.txt  mmap_res.c  testsigbus.c  testsigsegv.c
app/src/main/cpp/meta_program/: CMakeLists.txt  main.cpp  pow3.hpp
app/src/main/cpp/mhxyhtb/: mhxy.cpp
app/src/main/cpp/minizip/: CMakeLists.txt
app/src/main/cpp/mydlopen/: mydlopen.cpp  mydlopen.h
app/src/main/cpp/myecho/: myecho.c
app/src/main/cpp/mylief/: CMakeLists.txt
app/src/main/cpp/posion/: CMakeLists.txt  main.c  main.cpp
app/src/main/cpp/ptrace_tool/: CMakeLists.txt  ptraceit.c  ptraceit.cpp
app/src/main/cpp/pubg/: pubg.cpp  pubg.h
app/src/main/cpp/signal_action_merchant/: CMakeLists.txt  apue.h  error.c  signaction.c
app/src/main/cpp/slua/: CMakeLists.txt
app/src/main/cpp/tools/: CMakeLists.txt  tools.cpp  tools.h
app/src/main/cpp/utils/: CMakeLists.txt  Util.cpp  Util.h  android_debug.h  debug_utils.cpp
app/src/main/cpp/wxww/: longyuan.cpp
app/src/main/cpp/xhook_test/: CMakeLists.txt  biz.c
app/src/main/cpp/yeecall/: yeecall.cpp  yeecall.hpp
app/src/main/cpp/zlib123/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
hack_car/: install.bat
hack_car/data/: inject
key/: work.jks
mitmproxy/: script.py
note/: autel_re_note.md
note/Honda/: InfoDiag  authorization.txt  cn_Help.tab  init.xml  key.txt  newtool_1.tab  newtool_10.tab  newtool_12.tab  newtool_2.tab  newtool_21.tab  newtool_22.tab  newtool_24.tab  newtool_25.tab  newtool_26.tab  newtool_28.tab  newtool_29.tab  newtool_3.tab  newtool_4.tab  newtool_7.tab  newtool_8.tab  newtool_9.tab  tool_1.tab  tool_10.tab  tool_11.tab  tool_13.tab  tool_14.tab  tool_15.tab  tool_16.tab  tool_17.tab  tool_18.tab  tool_19.tab  tool_2.tab  tool_20.tab  tool_21.tab  tool_22.tab  tool_23.tab  tool_24.tab  tool_25.tab  tool_26.tab  tool_27.tab  (+39 more)
note/Honda/A000000/: B000000.tab  B000001.tab  B000002.tab  B000003.tab  B000004.tab  B000005.tab  B000006.tab  B000007.tab  B000008.tab  B000009.tab  B00000A.tab  B00000B.tab  B00000C.tab  B00000D.tab  B00000E.tab  B00000F.tab  B000010.tab  B000011.tab  B000012.tab  B000013.tab  B000014.tab  B000016.tab  B000017.tab  B000018.tab  B000019.tab  B00001A.tab  B00001B.tab  B00001C.tab  B00001D.tab  B00001E.tab  B00001F.tab  B000020.tab  B000021.tab  B000022.tab  B000023.tab  B000024.tab  B000025.tab  B000026.tab  B000027.tab  B000028.tab  (+8 more)
note/Honda/A000001/: B000000.tab  B000001.tab  B000003.tab  B000005.tab  B000006.tab  B000007.tab  B000008.tab  B000009.tab  B00000A.tab  B00000B.tab  B00000C.tab  B00000D.tab  B00000E.tab  B00000F.tab  B000010.tab  B000011.tab  B000012.tab  B000013.tab  B000014.tab  B000016.tab  B000017.tab  B000018.tab  B000019.tab  B00001A.tab  B00001B.tab  B00001C.tab  B00001D.tab  B00001E.tab  B00001F.tab  B000020.tab  B000021.tab  B000022.tab  B000023.tab  B000024.tab  B000025.tab  B000026.tab  B000027.tab  B000028.tab  B000029.tab  B00002A.tab  (+8 more)
note/Honda/A000002/: 00000000.tab  00000001.tab  00000002.tab  00000003.tab  00000004.tab  00000005.tab  00000006.tab  00000007.tab  00000008.tab  00000009.tab  0000000A.tab  0000000B.tab  0000000C.tab  0000000D.tab  0000000E.tab  0000000F.tab  00000010.tab  00000011.tab  00000012.tab  (+999 more)
script/: plt_hook.bat  run_frida.bat
(+219 files in other folders)
